--- a/tests/testFileHandler.ipynb
+++ b/tests/testFileHandler.ipynb
@@ -9,36 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'getFilePaths' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-34f33878dac7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mhelpers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfileHandler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetFilePaths\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'CESM-LME/mon/SST'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'b.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.*.nc'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'getFilePaths' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.085001-089912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.090001-099912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.100001-109912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.110001-119912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.120001-129912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.130001-139912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.140001-149912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.150001-159912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.160001-169912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.170001-179912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.180001-184912.nc',\n",
+       " 'E:/CMIP5-PMIP3/CESM-LME/mon/SSTb.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.185001-200512.nc']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import sys\n",
     "\n",
-    "sys.path.append('..')\n",
-    "import helpers.fileHandler\n",
+    "sys.path.append('../')\n",
+    "import helpers.fileHandler as fh\n",
     "\n",
-    "list = getFilePaths('CESM-LME/mon/SST', 'b.e11.BLMTRC5CN.f19_g16.001.pop.h.SST.*.nc')\n"
+    "fileList1 = fh.getFilePaths('CESM-LME/mon/SST', 'b\\.e11\\.BLMTRC5CN\\.f19_g16.001\\.pop\\.h\\.SST\\..+\\.nc')\n",
+    "\n",
+    "fileList2 = fh.getFilePaths('CESM-LME/mon/Ts/v7')\n",
+    "\n",
+    "fileList1\n",
+    "\n",
+    "\n",
+    "#add negative case test"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -64,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
