tweaks to SST index examples

--- a/tests/testDMICalc.ipynb
+++ b/tests/testDMICalc.ipynb
@@ -1746,15 +1746,9 @@
     }
    ],
    "source": [
-    "easternIO"
+    "easternIO.load()\n",
+    "westernIO.load()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
