--- a/tests/testDMICalc.ipynb
+++ b/tests/testDMICalc.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is more a protoype/early example than a real test. Can probably be deleted soon."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
