Adding seasonal averaging for indeces

--- a/tests/testMarshallSamCalc.ipynb
+++ b/tests/testMarshallSamCalc.ipynb
@@ -15,21 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
     "import matplotlib.pyplot as plt\n",
-    "import utils.pslIndex as psl\n",
+    "import utils.pslIndex as psl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import xarray\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +492,7 @@
        "                   nan,             nan,             nan,             nan])\n",
        "Coordinates:\n",
        "  * time     (time) object 1957-01-01 00:00:00 ... 2021-12-01 00:00:00\n",
-       "    month    (time) int64 1 2 3 4 5 6 7 8 9 10 11 ... 2 3 4 5 6 7 8 9 10 11 12</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'sam'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 780</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-d2b99091-b5b3-491e-8d7b-d79e2dee7fc8' class='xr-array-in' type='checkbox' checked><label for='section-d2b99091-b5b3-491e-8d7b-d79e2dee7fc8' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-0.8857 -2.309 0.06741 -2.0 -2.543 -0.8865 ... nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([-8.85708764e-01, -2.30872746e+00,  6.74059116e-02, -2.00026342e+00,\n",
+       "    month    (time) int64 1 2 3 4 5 6 7 8 9 10 11 ... 2 3 4 5 6 7 8 9 10 11 12</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'sam'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 780</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-071cee9d-9dad-4c5b-acc5-50744d2275c6' class='xr-array-in' type='checkbox' checked><label for='section-071cee9d-9dad-4c5b-acc5-50744d2275c6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-0.8857 -2.309 0.06741 -2.0 -2.543 -0.8865 ... nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([-8.85708764e-01, -2.30872746e+00,  6.74059116e-02, -2.00026342e+00,\n",
        "       -2.54282213e+00, -8.86544549e-01,  1.01562075e+00, -1.75578610e+00,\n",
        "        7.34103738e-01, -3.17711504e+00, -5.51077747e+00, -2.67541130e+00,\n",
        "        3.94520793e-02, -2.88830157e+00, -2.56613693e+00, -3.05594746e-01,\n",
@@ -524,12 +532,12 @@
        "       -2.49413140e-01,  1.81687438e+00,  1.15761520e+00,  2.32025354e+00,\n",
        "        1.98110346e+00,  2.22478221e+00, -9.62174038e-01,             nan,\n",
        "                   nan,             nan,             nan,             nan,\n",
-       "                   nan,             nan,             nan,             nan])</pre></div></div></li><li class='xr-section-item'><input id='section-1ed4d394-dcbc-4d15-8b5d-c333d409e7c9' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1ed4d394-dcbc-4d15-8b5d-c333d409e7c9' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1957-01-01 00:00:00 ... 2021-12-...</div><input id='attrs-f598894a-bb4a-4d81-aec1-7c7027cb70c1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f598894a-bb4a-4d81-aec1-7c7027cb70c1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-29cbacdb-fab2-4402-a5a9-3fe422d8e46c' class='xr-var-data-in' type='checkbox'><label for='data-29cbacdb-fab2-4402-a5a9-3fe422d8e46c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([cftime.DatetimeNoLeap(1957, 1, 1, 0, 0, 0, 0),\n",
+       "                   nan,             nan,             nan,             nan])</pre></div></div></li><li class='xr-section-item'><input id='section-3566668b-518e-429b-a458-b9591aa1b3e2' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3566668b-518e-429b-a458-b9591aa1b3e2' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1957-01-01 00:00:00 ... 2021-12-...</div><input id='attrs-59363d97-368f-4359-a2e1-45ef3400aa6f' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-59363d97-368f-4359-a2e1-45ef3400aa6f' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e96daff0-54ba-45b8-852a-c98a7b896f71' class='xr-var-data-in' type='checkbox'><label for='data-e96daff0-54ba-45b8-852a-c98a7b896f71' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([cftime.DatetimeNoLeap(1957, 1, 1, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(1957, 2, 1, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(1957, 3, 1, 0, 0, 0, 0), ...,\n",
        "       cftime.DatetimeNoLeap(2021, 10, 1, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(2021, 11, 1, 0, 0, 0, 0),\n",
-       "       cftime.DatetimeNoLeap(2021, 12, 1, 0, 0, 0, 0)], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>month</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>1 2 3 4 5 6 7 ... 6 7 8 9 10 11 12</div><input id='attrs-d7aee66a-0360-4b3c-8746-a3c3dfee0d83' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d7aee66a-0360-4b3c-8746-a3c3dfee0d83' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b3324584-c0eb-4513-ba02-3aad9af46e96' class='xr-var-data-in' type='checkbox'><label for='data-b3324584-c0eb-4513-ba02-3aad9af46e96' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,\n",
+       "       cftime.DatetimeNoLeap(2021, 12, 1, 0, 0, 0, 0)], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>month</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>1 2 3 4 5 6 7 ... 6 7 8 9 10 11 12</div><input id='attrs-bc407ee5-6df5-4e97-b861-741a96816909' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bc407ee5-6df5-4e97-b861-741a96816909' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7bed23a6-740b-4b53-8737-26dda490878d' class='xr-var-data-in' type='checkbox'><label for='data-7bed23a6-740b-4b53-8737-26dda490878d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,\n",
        "        6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10,\n",
        "       11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,\n",
        "        4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,\n",
@@ -569,7 +577,7 @@
        "        7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11,\n",
        "       12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,\n",
        "        5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9,\n",
-       "       10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-b0fad2ec-e489-41b0-9d8c-2eb7e748fdf6' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-b0fad2ec-e489-41b0-9d8c-2eb7e748fdf6' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "       10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-18a3cfc8-b843-47b1-bf2a-3809cfa47a80' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-18a3cfc8-b843-47b1-bf2a-3809cfa47a80' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'sam' (time: 780)>\n",
@@ -619,7 +627,7 @@
        "    month    (time) int64 1 2 3 4 5 6 7 8 9 10 11 ... 2 3 4 5 6 7 8 9 10 11 12"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,16 +641,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fe6a91e6a00>"
+       "<matplotlib.legend.Legend at 0x7fbfb941e220>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
