add climatology to sst calcs and work on Cesm traditional indeces

--- a/tests/testPeriodAverages.ipynb
+++ b/tests/testPeriodAverages.ipynb
@@ -27,8 +27,7 @@
     "import utils.sstIndex as sst\n",
     "import utils.pslIndex as psl\n",
     "import utils._indexDefinitions as _index\n",
-    "\n",
-    "%run '../utils/timePeriod.ipynb'"
+    "import averageForTimePeriod from utils/timePeriod"
    ]
   },
   {
