--- a/tests/testCesmLoad.ipynb
+++ b/tests/testCesmLoad.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Load some CESM Models</b>"
+    "# Load some CESM Models"
    ]
   },
   {
