--- a/tests/testCvdpTime.ipynb
+++ b/tests/testCvdpTime.ipynb
@@ -1029,7 +1029,8 @@
     }
    ],
    "source": [
-    "iodCvdp.time.values[0]"
+    "iodCvdp.time.values[0]\n",
+    "# should be jan 850"
    ]
   },
   {
@@ -1049,7 +1050,8 @@
     }
    ],
    "source": [
-    "iodCvdp.time.values[-1]"
+    "iodCvdp.time.values[-1]\n",
+    "# should be dec 2005"
    ]
   },
   {
@@ -1076,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
