tweaking/fixes to Cesm index calcs

--- a/calculateCesmMonthlyIndeces.ipynb
+++ b/calculateCesmMonthlyIndeces.ipynb
@@ -50,9 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0850cntl.001\n",
+      "Files imported: \n",
+      " ['E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.085001-089912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.090001-099912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.100001-109912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.110001-119912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.120001-129912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.130001-139912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.140001-149912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.150001-159912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.160001-169912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.170001-179912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.180001-184912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/SST/b.e11.B1850C5CN.f19_g16.0850cntl.001.pop.h.SST.185001-200512.nc']\n",
+      "Files imported: \n",
+      " ['E:/CMIP5-PMIP3/CESM-LME/mon/PSL/b.e11.B1850C5CN.f19_g16.0850cntl.001.cam.h0.PSL.085001-184912.nc', 'E:/CMIP5-PMIP3/CESM-LME/mon/PSL/b.e11.B1850C5CN.f19_g16.0850cntl.001.cam.h0.PSL.185001-200512.nc']\n"
+     ]
+    }
+   ],
    "source": [
     "for experiment in _model.cesmCntl:\n",
     "    print(experiment)\n",
@@ -62,12 +74,12 @@
     "    sstIndex = sst.calculateIndex(sstDs, 850, 1850)\n",
     "    indeces = xarray.merge([pslIndex, sstIndex])\n",
     "    indeces.assign_attrs(climatology='calculated based on 850-1850 climatology')\n",
-    "    indeces.to_netcdf('results/cesmFullForcingMonthlyIndeces/' + experiment + '.nc')\n"
+    "    indeces.to_netcdf('results/cesmMonthlyIndeces/' + experiment + '.nc')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +159,7 @@
     "\n",
     "    indeces = xarray.merge([pslIndex, sstIndex])\n",
     "    indeces.assign_attrs(climatology='calculated based on 850-1850 climatology')\n",
-    "    indeces.to_netcdf('results/cesmFullForcingMonthlyIndeces/LME.' + experiment + '.nc')\n"
+    "    indeces.to_netcdf('results/cesmMonthlyIndeces/LME.' + experiment + '.nc')\n"
    ]
   },
   {
