Change indian_ocean_dipole to dmi to make my life easier

--- a/tests/testFileHandler.ipynb
+++ b/tests/testFileHandler.ipynb
@@ -64,7 +64,7 @@
     "fileList2 = fh.getFilePaths('CESM-LME/mon/Ts/v7')\n",
     "#print(fileList2)\n",
     "\n",
-    "print(\"\\n\\n Please visually check outputs look ok.\")"
+    "print(\"\\n\\n Please file paths look ok.\")"
    ]
   },
   {
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
