--- a/tests/testPeriodAverages.ipynb
+++ b/tests/testPeriodAverages.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "import utils.sstIndex as sst\n",
     "import utils.pslIndex as psl\n",
     "import utils._indexDefinitions as _index\n",
-    "import averageForTimePeriod from utils/timePeriod"
+    "from utils.timePeriod import averageForTimePeriod"
    ]
   },
   {
@@ -215,7 +215,7 @@
     "expectedAv.index.name='year'\n",
     "\n",
     "#for every index defined in the index file\n",
-    "for keys in ['nino12', 'nino3', 'nino34', 'nino4', 'westIO', 'eastIO', 'indian_ocean_dipole', 'sam']:\n",
+    "for keys in ['nino12', 'nino3', 'nino34', 'nino4', 'westIO', 'eastIO', 'dmi', 'sam']:\n",
     "    answer = list()\n",
     "    \n",
     "    #grab the time period defined in the index file\n",
@@ -516,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
