Update to dmi instead of indian_... and other stuff

--- a/tests/testMarshallSamCalc.ipynb
+++ b/tests/testMarshallSamCalc.ipynb
@@ -21,8 +21,8 @@
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
-    "import matplotlib.pyplot as plt\n",
-    "import utils.pslIndex as psl"
+    "import utils.pslIndex as psl\n",
+    "import utils.climatology as climat"
    ]
   },
   {
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "import xarray\n",
-    "import pandas as pd"
+    "import pandas\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -49,11 +50,11 @@
     "url_SAMindex = 'http://www.nerc-bas.ac.uk/public/icd/gjma/newsam.1957.2007.txt'\n",
     "\n",
     "# import 40°S and 65°S data into pandas\n",
-    "m40 = pd.read_csv(url_40, sep='\\s+', header=0, index_col=0, skipinitialspace=True)\n",
-    "m65 = pd.read_csv(url_65, sep='\\s+', header=0, index_col=0, skipinitialspace=True)\n",
+    "m40 = pandas.read_csv(url_40, sep='\\s+', header=0, index_col=0, skipinitialspace=True)\n",
+    "m65 = pandas.read_csv(url_65, sep='\\s+', header=0, index_col=0, skipinitialspace=True)\n",
     "\n",
     "# import the actual SAM index Marshall calculates\n",
-    "M03_SAMindex = pd.read_csv(url_SAMindex, sep=' ', skipinitialspace=True)\n"
+    "M03_SAMindex = pandas.read_csv(url_SAMindex, sep=' ', skipinitialspace=True)\n"
    ]
   },
   {
@@ -492,7 +493,7 @@
        "                   nan,             nan,             nan,             nan])\n",
        "Coordinates:\n",
        "  * time     (time) object 1957-01-01 00:00:00 ... 2021-12-01 00:00:00\n",
-       "    month    (time) int64 1 2 3 4 5 6 7 8 9 10 11 ... 2 3 4 5 6 7 8 9 10 11 12</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'sam'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 780</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-394a0885-4fab-445d-9b4d-d599203b68b7' class='xr-array-in' type='checkbox' checked><label for='section-394a0885-4fab-445d-9b4d-d599203b68b7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-0.9413 -2.309 0.06741 -2.0 -2.543 -0.8865 ... nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([-9.41335698e-01, -2.30872746e+00,  6.74059116e-02, -2.00026342e+00,\n",
+       "    month    (time) int64 1 2 3 4 5 6 7 8 9 10 11 ... 2 3 4 5 6 7 8 9 10 11 12</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'sam'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 780</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-e2d17106-42c9-4b7b-9749-04c35678f29e' class='xr-array-in' type='checkbox' checked><label for='section-e2d17106-42c9-4b7b-9749-04c35678f29e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-0.9413 -2.309 0.06741 -2.0 -2.543 -0.8865 ... nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([-9.41335698e-01, -2.30872746e+00,  6.74059116e-02, -2.00026342e+00,\n",
        "       -2.54282213e+00, -8.86544549e-01,  1.01562075e+00, -1.75578610e+00,\n",
        "        7.34103738e-01, -3.17711504e+00, -5.51077747e+00, -2.67541130e+00,\n",
        "       -7.96536397e-03, -2.88830157e+00, -2.56613693e+00, -3.05594746e-01,\n",
@@ -532,12 +533,12 @@
        "       -2.49413140e-01,  1.81687438e+00,  1.15761520e+00,  2.32025354e+00,\n",
        "        1.94674881e+00,  2.22478221e+00, -9.62174038e-01,             nan,\n",
        "                   nan,             nan,             nan,             nan,\n",
-       "                   nan,             nan,             nan,             nan])</pre></div></div></li><li class='xr-section-item'><input id='section-bf678354-245b-48a3-b6e4-2fc2f56ec647' class='xr-section-summary-in' type='checkbox'  checked><label for='section-bf678354-245b-48a3-b6e4-2fc2f56ec647' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1957-01-01 00:00:00 ... 2021-12-...</div><input id='attrs-2864beac-e129-4e6f-ab9b-89c1b2418f20' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-2864beac-e129-4e6f-ab9b-89c1b2418f20' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-63b6780a-f7e7-476d-9333-6345f25c6f87' class='xr-var-data-in' type='checkbox'><label for='data-63b6780a-f7e7-476d-9333-6345f25c6f87' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([cftime.DatetimeNoLeap(1957, 1, 1, 0, 0, 0, 0),\n",
+       "                   nan,             nan,             nan,             nan])</pre></div></div></li><li class='xr-section-item'><input id='section-8166e475-66e7-48e5-b263-f10fa76383ba' class='xr-section-summary-in' type='checkbox'  checked><label for='section-8166e475-66e7-48e5-b263-f10fa76383ba' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1957-01-01 00:00:00 ... 2021-12-...</div><input id='attrs-bb3c1fcc-96e1-4b35-b26c-31ce891088e3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bb3c1fcc-96e1-4b35-b26c-31ce891088e3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ca05f004-9a44-4aff-bb42-3927888f75ad' class='xr-var-data-in' type='checkbox'><label for='data-ca05f004-9a44-4aff-bb42-3927888f75ad' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([cftime.DatetimeNoLeap(1957, 1, 1, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(1957, 2, 1, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(1957, 3, 1, 0, 0, 0, 0), ...,\n",
        "       cftime.DatetimeNoLeap(2021, 10, 1, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(2021, 11, 1, 0, 0, 0, 0),\n",
-       "       cftime.DatetimeNoLeap(2021, 12, 1, 0, 0, 0, 0)], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>month</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>1 2 3 4 5 6 7 ... 6 7 8 9 10 11 12</div><input id='attrs-b0e94602-2830-4756-9db4-85ff6794bbbd' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b0e94602-2830-4756-9db4-85ff6794bbbd' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a683e503-0b51-49e7-ab9a-b20a7f45a52d' class='xr-var-data-in' type='checkbox'><label for='data-a683e503-0b51-49e7-ab9a-b20a7f45a52d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,\n",
+       "       cftime.DatetimeNoLeap(2021, 12, 1, 0, 0, 0, 0)], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>month</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>1 2 3 4 5 6 7 ... 6 7 8 9 10 11 12</div><input id='attrs-c5299176-b3a5-4a7e-9009-79f543328c12' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c5299176-b3a5-4a7e-9009-79f543328c12' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b4547911-f731-4ac5-8fa0-f0c6764acc42' class='xr-var-data-in' type='checkbox'><label for='data-b4547911-f731-4ac5-8fa0-f0c6764acc42' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,\n",
        "        6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10,\n",
        "       11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,\n",
        "        4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,\n",
@@ -577,7 +578,7 @@
        "       12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,\n",
        "        5,  6,  7,  8,  9, 10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9,\n",
        "       10, 11, 12,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],\n",
-       "      dtype=int64)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-922a5631-bbab-4068-bc02-f399fc431f27' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-922a5631-bbab-4068-bc02-f399fc431f27' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "      dtype=int64)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-4a2aea5d-a926-4167-97e5-4b11dd894bf3' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-4a2aea5d-a926-4167-97e5-4b11dd894bf3' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'sam' (time: 780)>\n",
@@ -635,7 +636,12 @@
    "source": [
     "# calculate the index\n",
     "\n",
-    "samIndex=psl.normalisePSL(ds40, 1971, 2000)-psl.normalisePSL(ds65, 1971, 2000)\n",
+    "ds40Climatology = climat.dateInterval(ds40.PSL,1971, 2000).groupby('time.month')\n",
+    "ds65Climatology = climat.dateInterval(ds65.PSL,1971, 2000).groupby('time.month')\n",
+    "\n",
+    "samIndex=climat.normalise(ds40.PSL, ds40Climatology)-climat.normalise(ds65.PSL, ds65Climatology)\n",
+    "\n",
+    "\n",
     "samIndex.rename('sam')"
    ]
   },
@@ -647,7 +653,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e0a4aa8940>"
+       "<matplotlib.legend.Legend at 0x20a932e8310>"
       ]
      },
      "execution_count": 7,
