--- a/cesmRunAll.ipynb
+++ b/cesmRunAll.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run calculateCesmMonthlyIndeces.ipynb"
+    "%run cesmMonthlyIndeces.ipynb"
    ]
   },
   {
@@ -58,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
